--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4692,6 +4692,7 @@ input, select, textarea {
 			.swiper {
 	  width: 100%;
 	  height: 400px;
+	　margin-bottom: 40px;
 	}
 	
 	.swiper img {
@@ -4699,3 +4700,4 @@ input, select, textarea {
 	  height: 100%;
 	  object-fit: cover;
 	}
+
