--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4699,12 +4699,13 @@ input, select, textarea {
 	  width: 100%;
 	  height: 100%;
 	margin-bottom: 60px;
-	  object-fit: cover;
+	  object-fit: contain;
 	}
 
 	.game-overview {
   margin-top: 60px; 
 }
+
 
 
 
